# learn_python_the_hard_way

./: README.md
.virtual_documents/module2/: Untitled.ipynb
.virtual_documents/module3/: Untitled.ipynb  learning_pandas.ipynb
django/first_django/: db.sqlite3  manage.py
django/first_django/first_django/: settings.py  urls.py
django/first_django/main/: admin.py  models.py  urls.py  views.py
module1/: ex1.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex15_sample.txt  ex16.py  ex3.py  ex7.py
module1/.ipynb_checkpoints/: ex1-checkpoint.py  ex10-checkpoint.py  ex11-checkpoint.py  ex13-checkpoint.py  ex17-checkpoint.py  ex3-checkpoint.py  ex5-checkpoint.py  ex6-checkpoint.py  ex7-checkpoint.py  ex8-checkpoint.py  ex9-checkpoint.py  new_text-checkpoint.txt  text-checkpoint.txt
module2/: boolean_logic.py  ex18.py  ex18_demo.py  ex19.py  ex20_test.txt  ex21.py  ex22.py  ex23.py  ex24.py  ex25.py  ex26.py  ex26_code.py  ex31.py  ex32.py  ex33.py  ex34.py  ex35.py  ex42.py  ex43.py  ex44_1.py  ex44_2.py  ex44_3.py  game_of_code.py  slicing_lists.py  test.py
module2/.ipynb_checkpoints/: boolean_logic-checkpoint.py  dis_in_a_function-checkpoint.py  ex20-checkpoint.py  ex24-checkpoint.py  ex26_code-checkpoint.py  ex30-checkpoint.py  ex33-checkpoint.py  ex35-checkpoint.py  ex42-checkpoint.py  ex44-checkpoint.py  ex44_4-checkpoint.py
module2/oop/: ex46.py  ex47.py  ex47_dialogue.py  ex48b.py  ex48c.py  ex48e.py  how_to_program.md  my_own_documentation_on_how_to_make_anything.md  not_complex_example.py  trial_of_game.py  untitled.md
module2/oop/.ipynb_checkpoints/: ex45-checkpoint.py  ex47-checkpoint.py  ex48-checkpoint.py  (+1 more)
module3/: ex52.py  ex53.py  learning_pandas.ipynb  regex_program.py  ttb_page.html  web_scrapper.py
module3/.ipynb_checkpoints/: downloaded-checkpoint.csv  ex53-checkpoint.py  learning_pandas-checkpoint.ipynb  web_scrapper-checkpoint.py
module3/how to program/: ex51.py  ex51a.py  ex51b.py  ex51c.py
test_project/: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  appveyor.yml  pyproject.tml  pyproject.toml
test_project/.circleci/: config.yml
test_project/conda.recipe/: meta.yaml
test_project/src/test_project/: __init__.py  __main__.py  cli.py
test_project/tests/: test_cli.py
(+11 files in other folders)
